# zero-civil-engineer-agent

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  agent.py  alembic.ini  package.json  playwright.config.ts  pyproject.toml
.claude/: settings.json
.claude/agents/: agent-builder.md  code-generator.md  qa-auditor.md  spec-writer.md
.claude/commands/: zero-shot-build.md
.github/workflows/: ci-full.yml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_culvert_schema.py  0003_component_platform.py  0004_refinement_lineage.py
deploy/: DOMAIN.md  README.md  attach-domain-to-lb.sh  bootstrap.sh  deploy-remote.sh  ir-agent.service
frontend/: next.config.ts  package.json  pnpm-lock.yaml
spec/: agent.md  api.md  architecture.md  data.md  roadmap.md  ui.md
spec/capabilities/: calc-sheet.md  component-registry.md  design-library.md  design-vetting.md  ga-drawing.md  index.md  irs-engine.md  m00004-box-culvert.md  machine-element.md  model-3d.md  nl-design-intake.md  pier-abutment.md  plate-girder.md  proof-check.md  retaining-wall.md  rolling-stock-member.md  session-refinement.md  slab-tbeam.md  structural-steel-member.md
src/: __main__.py
src/api/: __init__.py  _common.py  components.py  designs.py  health.py  presets.py  sessions.py
src/components/: __init__.py  base.py  coming_soon.py  registry.py
src/config/: settings.py
src/db/: models.py  session.py
src/domain/: __init__.py  api.py  culvert.py
src/drawing/: __init__.py  _pil_compat.py  ga.py  sheet.py  svg_render.py  views.py  (+1 more)
tests/: conftest.py
(+369 files in other folders)
