[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "structlog>=24.1",
    "langgraph>=0.1",
    "google-genai>=2.9.0",
    "ezdxf==1.4.4",
    "anastruct==1.7.0",
    "matplotlib>=3.9,<4",
    "build123d==0.11.1",
    "reportlab>=4.0,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "httpx>=0.27"]

# uv installs this group by default, so `uv run pytest ...` works without extra flags.
[dependency-groups]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
